--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ project(bluetooth-win32 VERSION "0.1.0" LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/)
 
+add_subdirectory(enumerate_bt_devices)
 add_subdirectory(enumerate_bt_radio_info)
