Adding draft of the automatic authentication of incoming BT devices

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/)
 
+add_subdirectory(authenticate_incoming_bt_device)
 add_subdirectory(enumerate_bt_devices)
 add_subdirectory(enumerate_bt_radio_info)
 add_subdirectory(make_bt_radio_discoverable)
